k8/backend/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-app-deployment
  namespace: chat-app-backend-ns
  labels:
    app: backend-chat-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend-chat-app
  template:
    metadata:
      labels:
        app: backend-chat-app
    spec:
      containers:
      - name: chat-app-backend
        image: alokmishra773/chat-backend:latest
        ports:
          - containerPort: 5001
