k8/backend/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chat-app-backend-ingress
  namespace: chat-app-backend-ns

spec:
  rules:
    - http:
        paths:
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: backend-app-service
                port:
                  number: 3001

          - path: /socket.io/
            pathType: Prefix
            backend:
              service:
                name: backend-app-service
                port:
                  number: 3001
